2007-03-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/svg.c: fixed incorrect PDB documentation.

2007-03-21  Martin Nordholts  <martin@svn.gnome.org>

	* plug-ins/common/svg.c (run): Added comment to explain why the
	svg file provided resolution is not clamped against
	GIMP_MIN/MAX_RESOLUTION.

2007-03-21  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): don't
	call gimp_zoom_model_zoom() before assigning shell->display. Fixes
	bug #421044.

2007-03-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpblendtool.c (gimp_blend_tool_button_release): fixed
	typo spotted by Bill Skaggs.

2007-03-21  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-preview.c
	(gimp_display_shell_trace_tri_edge): be more robust to avoid
	crashes like bug #420595.

2007-03-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcursorview.[ch] (gimp_color_frame_update_cursor):
	disallow passing a NULL image.

	(gimp_color_frame_clear_cursor): new function that clears the
	cursor view.

	* app/widgets/gimpcolorframe.c (gimp_color_frame_update): if
	color_frame->sample_valid is FALSE, don't do any color
	transformations and don't construct any string because none
	of them is going to be used (all labels will show "n/a").

	* app/display/gimpstatusbar.[ch]: renamed set_cursor() API
	to update_cursor().

	* app/display/gimpdisplayshell-cursor.c
	(gimp_display_shell_update_cursor): move variables to local
	scopes. Follow GimpStatusbar API change. Cleanup.

	(gimp_display_shell_clear_cursor): ditto. Follow GimpColorFrame
	API change.

2007-03-20  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c
	* app/menus/plug-in-menus.c: GimpPlugInProcedure has a boolean
	member "file_proc" now, use it instead of checking prefixes,
	extensions and magics manually.

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_mime_type)
	(gimp_plug_in_procedure_set_thumb_loader): set